--- a/public/category-selection.html
+++ b/public/category-selection.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Category Selection</title>
-  <link rel="stylesheet" href="css/styles.css">
+    <title>Category Selection</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Select a Product Category</h1>
-  <ul>
-    <li><a href="products.html?category=electronics">Electronics</a></li>
-    <li><a href="products.html?category=clothing">Clothing</a></li>
-    <li><a href="products.html?category=home-goods">Home Goods</a></li>
-  </ul>
+    <div class="container">
+        <h1>Select a Product Category</h1>
+        <ul>
+            <li><a href="products.html?category=raw">Raw</a></li>
+            <li><a href="products.html?category=blend">Blend</a></li>
+            <li><a href="products.html?category=hybrid">Hybrid</a></li>
+            <li><a href="products.html?category=spicy">Spicy</a></li>
+        </ul>
+    </div>
 </body>
 </html>
