--- a/public/products.html
+++ b/public/products.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Products</title>
-  <link rel="stylesheet" href="css/styles.css">
+    <title>Products</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Products</h1>
-  <ul id="productList"></ul>
-  <a href="cart.html">View Cart</a>
-
-  <script src="js/script.js"></script>
+    <div class="container">
+        <h1>Products</h1>
+        <ul id="productList"></ul>
+        <a href="cart.html">View Cart</a>
+    </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
