--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kariakoo E-Shop</title>
-  <link rel="stylesheet" href="css/styles.css">
+    <title>Kariakoo E-Shop</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Welcome to Kariakoo E-Shop</h1>
-  <a href="age-verification.html">Start Shopping</a>
+    <div class="container">
+        <h1>Welcome to Kariakoo E-Shop</h1>
+        <p>Please verify your age to continue.</p>
+        <label for="age">Enter your age:</label>
+        <input type="number" id="age" name="age" min="1">
+        <button onclick="verifyAge()">Submit</button>
+        <script src="js/script.js"></script>
+    </div>
 </body>
 </html>
